fixed the image url issues

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <!-- Fixed: Single navbar_menu containing all navigation items -->
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Home</a>
+                    <a href="index.html" class="navbar_links">Home</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tech.html" class="navbar_links">Tech</a>
+                    <a href="tech.html" class="navbar_links">Tech</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Products</a>
+                    <a href="product.html" class="navbar_links">Products</a>
                 </li>
                 <!-- Sign Up button as part of the menu -->
                 <li class="navbar_item navbar_btn">
