--- a/tech.html
+++ b/tech.html
@@ -23,13 +23,13 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Home</a>
+                    <a href="index.html" class="navbar_links">Home</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tech.html" class="navbar_links active">Tech</a>
+                    <a href="tech.html" class="navbar_links active">Tech</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Products</a>
+                    <a href="product.html" class="navbar_links">Products</a>
                 </li>
                 <li class="navbar_item navbar_btn">
                     <a href="/" class="button">Sign Up</a>
